[Feat] 제출 위한 README 수정 및 env sample 추가
