# bin/swagger.json
@@ -39,7 +39,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseBase_lt___type_gt_"
+                  "type": "string"
                 }
               }
             },
@@ -227,7 +227,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseBase_lt___type_gt_.o1"
+                  "type": "string"
                 }
               }
             },
@@ -304,7 +304,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseBase_lt___type_gt_.o2"
+                  "type": "string"
                 }
               }
             },
@@ -438,7 +438,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseBase_lt___type_gt_.o3"
+                  "type": "string"
                 }
               }
             },
@@ -498,7 +498,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResponseBase_lt___type_gt_.o4"
+                  "type": "string"
                 }
               }
             },
@@ -561,122 +561,6 @@
           "title",
           "content",
           "imageUrl"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "ResponseBase_lt___type_gt_": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "boolean"
-          },
-          "message": {
-            "x-typia-required": false,
-            "x-typia-optional": true,
-            "type": "string"
-          },
-          "data": {
-            "$ref": "#/components/schemas/__type"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "status",
-          "data"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "__type": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "ResponseBase_lt___type_gt_.o1": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "boolean"
-          },
-          "message": {
-            "x-typia-required": false,
-            "x-typia-optional": true,
-            "type": "string"
-          },
-          "data": {
-            "$ref": "#/components/schemas/__type.o1"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "status",
-          "data"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "__type.o1": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "x-typia-required": true,
-            "x-typia-optional": false
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "ResponseBase_lt___type_gt_.o2": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "boolean"
-          },
-          "message": {
-            "x-typia-required": false,
-            "x-typia-optional": true,
-            "type": "string"
-          },
-          "data": {
-            "$ref": "#/components/schemas/__type.o2"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "status",
-          "data"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "__type.o2": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id"
         ],
         "x-typia-jsDocTags": []
       },
@@ -917,45 +801,6 @@
         ],
         "x-typia-jsDocTags": []
       },
-      "ResponseBase_lt___type_gt_.o3": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "boolean"
-          },
-          "message": {
-            "x-typia-required": false,
-            "x-typia-optional": true,
-            "type": "string"
-          },
-          "data": {
-            "$ref": "#/components/schemas/__type.o3"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "status",
-          "data"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "__type.o3": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id"
-        ],
-        "x-typia-jsDocTags": []
-      },
       "LoginUserProps": {
         "type": "object",
         "properties": {
@@ -974,45 +819,6 @@
         "required": [
           "email",
           "password"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "ResponseBase_lt___type_gt_.o4": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "boolean"
-          },
-          "message": {
-            "x-typia-required": false,
-            "x-typia-optional": true,
-            "type": "string"
-          },
-          "data": {
-            "$ref": "#/components/schemas/__type.o4"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "status",
-          "data"
-        ],
-        "x-typia-jsDocTags": []
-      },
-      "__type.o4": {
-        "type": "object",
-        "properties": {
-          "accessToken": {
-            "x-typia-required": true,
-            "x-typia-optional": false,
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "accessToken"
         ],
         "x-typia-jsDocTags": []
       }
